[package]
name = "illumina_coordinates"
version = "0.9.1"
authors = ["Jim Rybarski <jim@rybarski.com>"]
description = "Parses Illumina sequence identifiers found in FASTQ files"
repository = "https://github.com/jimrybarski/illumina-coordinates"
readme = "README.md"
keywords = ["illumina", "fastq", "bioinformatics", "champ", "sequencing"]
categories = ["science", "parsing"]
license = "MIT"

[badges]
travis-ci = { repository = "jimrybarski/illumina-coordinates" }
maintenance = { status = "passively-maintained" }